[tool.poetry]
name = "leetcode-solutions"
version = "0.1.0"
description = ""
authors = ["Xingyu Long <halolong@hotmail.com>"]
readme = "README.md"
packages = [{include = "leetcode_solutions"}]

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.64.1"
pytablewriter = "^0.64.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
